--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 header {
   display: flex;
   align-items: center;
-  background-color: #181818;
+  background-color: var(--surface-color);
   position: sticky;
   top: 0;
   height: max-content;
@@ -9,7 +9,7 @@ header {
 
 header a {
   text-decoration: none;
-  color: #FEFEFE;
+  color: var(--light-color);
 }
 
 nav {
@@ -38,13 +38,18 @@ nav {
 }
 
 .nav-items a:hover {
-  border-bottom: 2px solid #FEFEFE
+  border-bottom: 2px solid var(--light-color);
 }
 
-.ham-menu {
+.ham-menu,
+.ham-btn {
   display: none;
   justify-content: center;
   margin-bottom: 2rem;
   font-size: 2rem;
-  color: #FEFEFE;
+  color: var(--light-color);
+}
+
+#cb-ham {
+  display: none;
 }
