--- a/css/base.css
+++ b/css/base.css
@@ -39,6 +39,12 @@ html {
   scroll-behavior: smooth;
 }
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 h1 {
   font-family: var(--alata);
   font-size: 1.8rem;
@@ -47,6 +53,11 @@ h1 {
 
 h2 {
   font-size: 1.5rem;
+  color: var(--light-color);
+}
+
+h3 {
+  font-size: 1.2rem;
   color: var(--light-color);
 }
 
