--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,8 +1,9 @@
 @media(max-width: 640px) {
   html {
-    font-size: 10px;
+    font-size: 14px;
   }
 
+  /* Header */
   header {
     flex-direction: column;
     justify-content: space-evenly;
@@ -26,12 +27,8 @@
     margin-bottom: 1rem;
   }
 
-  .ham-menu,
   .ham-btn {
     display: flex;
-  }
-
-  .ham-btn {
     max-width: fit-content;
     margin-left: auto;
     margin-right: auto;
@@ -52,15 +49,86 @@
 
   #cb-ham:checked~.nav-items {
     display: flex;
+    margin-top: -1rem;
   }
 
   #cb-ham:not(:checked)~.nav-items {
     display: none;
   }
+
+  /* About me */
+  .about-section {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .main-img {
+    width: 50%;
+  }
+
+  .main-img img {
+    margin-right: 0;
+  }
+
+  .dev-info-container {
+    width: 85%;
+  }
+
+  .dev-info,
+  .dev-skills {
+    width: 100%;
+    text-align: center;
+  }
+
+  .dev-info h2,
+  .dev-info h3 {
+    margin-bottom: 1rem;
+  }
+
+  .skills {
+    grid-template-columns: repeat(2, 1fr);
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    justify-items: center;
+  }
 }
 
 @media((min-width: 641px) and (max-width: 1007px)) {
-  html {
-    font-size: 12px;
+
+  /* About me */
+  .about-section {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .main-img {
+    width: 60%;
+  }
+
+  .main-img img {
+    margin-right: 0;
+  }
+
+  .dev-info-container {
+    width: 80%;
+  }
+
+  .dev-info,
+  .dev-skills {
+    width: 100%;
+    text-align: center;
+  }
+
+  .dev-info h2,
+  .dev-info h3 {
+    margin-bottom: 1rem;
+  }
+
+  .skills {
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    justify-items: center;
   }
 }
