--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,6 +3,14 @@
     font-size: 14px;
   }
 
+  section {
+    margin-bottom: 2rem;
+  }
+
+  .container {
+    width: 80%;
+  }
+
   /* Header */
   header {
     flex-direction: column;
@@ -60,6 +68,7 @@
   .about-section {
     flex-direction: column;
     align-items: center;
+    height: auto;
   }
 
   .main-img {
@@ -92,14 +101,29 @@
     margin-right: auto;
     justify-items: center;
   }
+
+  /* Projects */
+  .projects {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
 }
 
-@media((min-width: 641px) and (max-width: 1007px)) {
+@media((min-width: 641px) and (max-width: 1024px)) {
+  section {
+    margin-bottom: 2rem;
+  }
+
+  .container {
+    width: 80%;
+  }
 
   /* About me */
   .about-section {
     flex-direction: column;
     align-items: center;
+    height: auto;
   }
 
   .main-img {
@@ -130,5 +154,17 @@
     margin-left: auto;
     margin-right: auto;
     justify-items: center;
+  }
+
+  /* Projects */
+  .projects {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+
+  .project-skills {
+    grid-template-columns: repeat(5, 1fr);
+    width: 50%;
   }
 }
