--- a/css/sections.css
+++ b/css/sections.css
@@ -83,3 +83,50 @@
 #cb-skills:not(:checked)~.more-skills {
   display: none;
 }
+
+/* Projects */
+.project-card {
+  text-decoration: none;
+  border-radius: 10px;
+  padding: 1rem;
+}
+
+.project-card img {
+  width: 100%;
+}
+
+.project-card:hover {
+  background-color: var(--surface-color);
+}
+
+.project-card h3,
+.project-card p {
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+.projects {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 50px;
+  margin-top: 1rem;
+}
+
+.project-skills {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 15px;
+  row-gap: 0;
+  margin-top: 0.5rem;
+  width: 60%;
+}
+
+.project-skills p {
+  background-color: var(--surface-color);
+  border: 1px solid var(--light-color);
+  border-radius: 5px;
+  text-align: center;
+  font-size: 0.8rem;
+  width: 4.5rem;
+  padding: 0.5rem;
+}
